added a link to an omniglot page on greenlandic

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 <body>
 
 <h1>Aluu! </h1>
-<p>Jonasan Sumisu imik ateqarpunga! Kalaallit Nunaat minngaaneerpunga. 
+<p><i>Jonasan Sumisu</i> imik ateqarpunga! <b>Kalaallit Nunaat</b> minngaaneerpunga. 
 Oqaatsit ataasiinnaat naammanngillat aammaa umiatsiaasara pullattagaq nimerissanik ulikkaarpoq!</p>
 <hr>
 <p> Hello! My name is <i>Jonathan Smith</i>. I am from <b>Greenland.</b>
 One language is never enough and my hovercraft is full of eels!
+<br>
+<h3>Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
 </body>
 </html>
