added 2 pics, one that takes you to a wikipage

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@ Oqaatsit ataasiinnaat naammanngillat aammaa umiatsiaasara pullattagaq nimerissan
 One language is never enough and my hovercraft is full of eels!
 <br>
 <h3>Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
+<br>
+<img src="images/greenland_coat_of_arms.png" width="150px">
+<a href="https://www.wikipedia.org/wiki/Greenland"><img src="images/greenland_flag.png" width="300px"></a>
 </body>
 </html>
