added some lists

--- a/index.html
+++ b/index.html
@@ -16,5 +16,59 @@ One language is never enough and my hovercraft is full of eels!
 <br>
 <img src="images/greenland_coat_of_arms.png" width="150px">
 <a href="https://www.wikipedia.org/wiki/Greenland"><img src="images/greenland_flag.png" width="300px"></a>
+
+<ol>
+    <li>Alphabet</li>
+        <ul>
+            <li>A (the a in ask)</li>
+            <li>E (the e in egg)</li>
+            <li>F (the f in fun)</li>
+            <li>G (the g in gold)</li>
+            <li>I (the ee in meet)</li>
+            <li>J (the y in yes)</li>
+            <li>K (the k in kit)</li>
+            <li>L (the l in life)</li>
+            <li>M (the m in moon)</li>
+            <li>N (the n in nice)</li>
+            <li>O (the o in cold)</li>
+            <li>P (the p in pen)</li>
+            <li>Q (the q in queen)/li>
+            <li>R (the r in red)</li>
+            <li>S (the s in sea)</li>
+            <li>T (the t in tip)</li>
+            <li>U (the oo in booth)</li>
+            <li>V (the v in van)</li>
+        </ul>
+    <li>Loan Alphabet
+        <ul>
+            <li>B (the b in bid)</li>
+            <li>C (the c in cat)</li>
+            <li>D (the d in desk)</li>
+            <li>H (the h in html)</li>
+                <ul>
+                    <li>HMTL is Awesome!</li>
+                </ul>
+            <li>W (it's a German w, so basically a v sound)</li>
+            <li>X (the x in tax)</li>
+            <li>Y (the ew in new)</li>
+            <li>Z (the s in sun)</li>
+            <li>Å (the o in old)</li>
+            <li>Æ (the a in ate)</li>
+            <li>Ø (the ir in weird)</li>
+        </ul>
+    </li>
+</ol>
+<ul><li>This</li>
+    <ul>
+    <li>Website</li>
+    <li>is</li>
+        <ul>
+        <li>Under</li>
+        <li>Construction</li>
+    </ul>
+<li>So</li>
+</ul>
+<li>Please</li>
+<li>Go</li>
 </body>
 </html>
