--- a/index.html
+++ b/index.html
@@ -17,46 +17,18 @@ One language is never enough and my hovercraft is full of eels!
 <img src="images/greenland_coat_of_arms.png" width="150px">
 <a href="https://www.wikipedia.org/wiki/Greenland"><img src="images/greenland_flag.png" width="300px"></a>
 
-<ol>
-    <li>Alphabet</li>
+<ol><li>Special Geminated Consinents</li>
         <ul>
-            <li>A (the a in ask)</li>
-            <li>E (the e in egg)</li>
-            <li>F (the f in fun)</li>
-            <li>G (the g in gold)</li>
-            <li>I (the ee in meet)</li>
-            <li>J (the y in yes)</li>
-            <li>K (the k in kit)</li>
-            <li>L (the l in life)</li>
-            <li>M (the m in moon)</li>
-            <li>N (the n in nice)</li>
-            <li>O (the o in cold)</li>
-            <li>P (the p in pen)</li>
-            <li>Q (the q in queen)/li>
-            <li>R (the r in red)</li>
-            <li>S (the s in sea)</li>
-            <li>T (the t in tip)</li>
-            <li>U (the oo in booth)</li>
-            <li>V (the v in van)</li>
+            <li>ll = (voiceless sh)</li>
+            <li>rr = (rolled r)
         </ul>
-    <li>Loan Alphabet
+    <li>Vowels</li>
         <ul>
-            <li>B (the b in bid)</li>
-            <li>C (the c in cat)</li>
-            <li>D (the d in desk)</li>
-            <li>H (the h in html)</li>
-                <ul>
-                    <li>HMTL is Awesome!</li>
-                </ul>
-            <li>W (it's a German w, so basically a v sound)</li>
-            <li>X (the x in tax)</li>
-            <li>Y (the ew in new)</li>
-            <li>Z (the s in sun)</li>
-            <li>Å (the o in old)</li>
-            <li>Æ (the a in ate)</li>
-            <li>Ø (the ir in weird)</li>
+            <li>a</li>
+            <li>i</li>
+            <li>u</li>
+            <li>ai</li>
         </ul>
-    </li>
 </ol>
 <ul><li>This</li>
     <ul>
@@ -70,5 +42,83 @@ One language is never enough and my hovercraft is full of eels!
 </ul>
 <li>Please</li>
 <li>Go</li>
+<table border="1px">
+    <tr>
+        <th>Letters</th>
+        <th>Pronounciation</th>
+    </tr>
+    <tr>
+        <td>A (a)</td>
+        <td>The a in "ask"</td>
+    </tr>
+    <tr>
+        <td>E (e)</td>
+        <td>The e in "egg"</td>
+    </tr>
+    <tr>
+        <td>F (ef)
+        <td>The f in "fun"
+    </tr>
+    <tr>
+        <td>G (ge)
+        <td>The g in "gold"
+    </tr>
+    <tr>
+        <td>I (i)
+        <td>The ee in "meet"
+    </tr>
+    <tr>
+        <td>J (je)
+        <td>The y in "yes"
+    </tr>
+    <tr>
+        <td>K (ka)
+        <td>The k in "kit"
+    </tr>
+    <tr>
+        <td>L (el)
+        <td>The l in "life"
+    </tr>
+    <tr>
+        <td>M (em)
+        <td>The m in "moon"
+    </tr>
+    <tr>
+        <td>N (en)
+        <td>The n in "nice"
+    </tr>
+    <tr>
+        <td>O (o)
+        <td>The o in "cold"
+    </tr>
+    <tr>
+        <td>P (pe)
+        <td>The p in "pen"
+    </tr>
+    <tr>
+        <td>Q (qaa)
+        <td>The q in "queen"
+    </tr>
+    <tr>
+        <td>R (er)
+        <td>The r in "red"
+    </tr>
+    <tr>
+        <td>S (es)
+        <td>The s in "sea"
+    </tr>
+    <tr>
+        <td>T (te)
+        <td>The t in "tip"
+    </tr>
+    <tr>
+        <td>U (u)
+        <td>The oo in "booth"
+    </tr>
+    <tr>
+        <td>V (ve)
+        <td>The v in "van"
+    </tr>
+</table>
 </body>
 </html>
