--- a/dark.html
+++ b/dark.html
@@ -11,7 +11,7 @@ Oqaatsit ataasiinnaat naammanngillat aammaa umiatsiaasara pullattagaq nimerissan
 <p style="color:#ffffff"> Hello! My name is <i>Jonathan Smith</i>. I am from <b>Greenland.</b>
 One language is never enough and my hovercraft is full of eels!
 <br>
-<h3 style="color:#ffffff">Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
+<h3 style="color:#ffffff; text-align:center; font-size:125%">Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
 <br>
 <img src="images/greenland_coat_of_arms.png" width="150px">
 <a href="https://www.wikipedia.org/wiki/Greenland"><img src="images/greenland_flag.png" width="300px"></a>
