utilized selection by tag

--- a/dark.html
+++ b/dark.html
@@ -2,13 +2,27 @@
 <html>
 <head>
 <title>Tikilluarit!</title>
+<style>
+    p {
+        font-size:16px;
+        color:white
+    }
+    td {
+        text-align:center;
+    }
+    ol {
+        background-color:#dddddd;
+
+        color:#CF6679;
+    }
+</style>
 </head>
 <body style="background-color:#111111">
 <h1 style="color:#ffffff">Aluu! </h1>
-<p style="color:#ffffff"><i>Jonasan Sumisu</i> imik ateqarpunga! <b>Kalaallit Nunaat</b> minngaaneerpunga. 
+<p><i>Jonasan Sumisu</i> imik ateqarpunga! <b>Kalaallit Nunaat</b> minngaaneerpunga. 
 Oqaatsit ataasiinnaat naammanngillat aammaa umiatsiaasara pullattagaq nimerissanik ulikkaarpoq!</p>
 <hr>
-<p style="color:#ffffff"> Hello! My name is <i>Jonathan Smith</i>. I am from <b>Greenland.</b>
+<p> Hello! My name is <i>Jonathan Smith</i>. I am from <b>Greenland.</b>
 One language is never enough and my hovercraft is full of eels!
 <br>
 <h3 style="color:#ffffff; text-align:center; font-size:125%">Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
