made the code more compact

--- a/dark.html
+++ b/dark.html
@@ -15,6 +15,14 @@
 
         color:#CF6679;
     }
+    .letters {
+        background-color:#BB86FC;
+        color:#000000
+    }
+    .pronounciation {
+        background-color:#3700B3;
+        color:#ffffff
+    }
 </style>
 </head>
 <body style="background-color:#111111">
@@ -61,76 +69,76 @@ One language is never enough and my hovercraft is full of eels!
         <th style="background-color:#03DAC6;color:#ffffff">Pronounciation</th>
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">A (a)</td>
-        <td style="background-color:#3700B3">The a in "ask"</td>
+        <td class="letters">A (a)</td>
+        <td class="pronounciation">The a in "ask"</td>
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">E (e)</td>
-        <td style="background-color:#3700B3">The e in "egg"</td>
+        <td class="letters">E (e)</td>
+        <td class="pronounciation">The e in "egg"</td>
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">F (ef)
-        <td style="background-color:#3700B3">The f in "fun"
+        <td class="letters">F (ef)
+        <td class="pronounciation">The f in "fun"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">G (ge)
-        <td style="background-color:#3700B3">The g in "gold"
+        <td class="letters">G (ge)
+        <td class="pronounciation">The g in "gold"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">I (i)
-        <td style="background-color:#3700B3">The ee in "meet"
+        <td class="letters">I (i)
+        <td class="pronounciation">The ee in "meet"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">J (je)
-        <td style="background-color:#3700B3">The y in "yes"
+        <td class="letters">J (je)
+        <td class="pronounciation">The y in "yes"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">K (ka)
-        <td style="background-color:#3700B3">The k in "kit"
+        <td class="letters">K (ka)
+        <td class="pronounciation">The k in "kit"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">L (el)
-        <td style="background-color:#3700B3">The l in "life"
+        <td class="letters">L (el)
+        <td class="pronounciation">The l in "life"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">M (em)
-        <td style="background-color:#3700B3">The m in "moon"
+        <td class="letters">M (em)
+        <td class="pronounciation">The m in "moon"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">N (en)
-        <td style="background-color:#3700B3">The n in "nice"
+        <td class="letters">N (en)
+        <td class="pronounciation">The n in "nice"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">O (o)
-        <td style="background-color:#3700B3">The o in "cold"
+        <td class="letters">O (o)
+        <td class="pronounciation">The o in "cold"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">P (pe)
-        <td style="background-color:#3700B3">The p in "pen"
+        <td class="letters">P (pe)
+        <td class="pronounciation">The p in "pen"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">Q (qaa)
-        <td style="background-color:#3700B3">The q in "queen"
+        <td class="letters">Q (qaa)
+        <td class="pronounciation">The q in "queen"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">R (er)
-        <td style="background-color:#3700B3">The r in "red"
+        <td class="letters">R (er)
+        <td class="pronounciation">The r in "red"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">S (es)
-        <td style="background-color:#3700B3">The s in "sea"
+        <td class="letters">S (es)
+        <td class="pronounciation">The s in "sea"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">T (te)
-        <td style="background-color:#3700B3">The t in "tip"
+        <td class="letters">T (te)
+        <td class="pronounciation">The t in "tip"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">U (u)
-        <td style="background-color:#3700B3">The oo in "booth"
+        <td class="letters">U (u)
+        <td class="pronounciation">The oo in "booth"
     </tr>
     <tr>
-        <td style="background-color:#BB86FC;color:#000000">V (ve)
-        <td style="background-color:#3700B3">The v in "van"
+        <td class="letters">V (ve)
+        <td class="pronounciation">The v in "van"
     </tr>
 </table>
 </body>
