added EVEN more compact code css stuff

--- a/dark.html
+++ b/dark.html
@@ -1,29 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tikilluarit!</title>
-<style>
-    p {
-        font-size:16px;
-        color:white
-    }
-    td {
-        text-align:center;
-    }
-    ol {
-        background-color:#dddddd;
-
-        color:#CF6679;
-    }
-    .letters {
-        background-color:#BB86FC;
-        color:#000000
-    }
-    .pronounciation {
-        background-color:#3700B3;
-        color:#ffffff
-    }
-</style>
+    <title>Tikilluarit!</title>
+     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body style="background-color:#111111">
 <h1 style="color:#ffffff">Aluu! </h1>
