--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="aboutme.html">About Me</a>
+            <li class="active"><a href="aboutme.html">About Me</a>
             <li><a href="contactme.html">Contact Me</a>
             <li class="dropdown">
                 <a href="#">Projects</a>
