added all the stuff to my portfolio

--- a/index.html
+++ b/index.html
@@ -1,124 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tikilluarit!</title>
+    <title>Tikilluarit! (Welcome!)</title>
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
-
-<h1>Aluu! </h1>
-<p><i>Jonasan Sumisu</i> imik ateqarpunga! <b>Kalaallit Nunaat</b> minngaaneerpunga. 
-Oqaatsit ataasiinnaat naammanngillat aammaa umiatsiaasara pullattagaq nimerissanik ulikkaarpoq!</p>
-<hr>
-<p> Hello! My name is <i>Jonathan Smith</i>. I am from <b>Greenland.</b>
-One language is never enough and my hovercraft is full of eels!
-<br>
-<h3>Check out this website on Greenlandic <a href="https://omniglot.com/writing/greenlandic.htm">here</a> ;)
-<br>
-<img src="images/greenland_coat_of_arms.png" width="150px">
-<a href="https://www.wikipedia.org/wiki/Greenland"><img src="images/greenland_flag.png" width="300px"></a>
-
-<ol><li>Special Geminated Consinents</li>
-        <ul>
-            <li>ll = (voiceless sh)</li>
-            <li>rr = (rolled r)
-        </ul>
-    <li>Vowels</li>
-        <ul>
-            <li>a</li>
-            <li>i</li>
-            <li>u</li>
-            <li>ai</li>
-        </ul>
-</ol>
-<ul><li>This</li>
-    <ul>
-    <li>Website</li>
-    <li>is</li>
-        <ul>
-        <li>Under</li>
-        <li>Construction</li>
-    </ul>
-<li>So</li>
-</ul>
-<li>Please</li>
-<li>Go</li>
-<table border="1px">
-    <tr>
-        <th>Letters</th>
-        <th>Pronounciation</th>
-    </tr>
-    <tr>
-        <td>A (a)</td>
-        <td>The a in "ask"</td>
-    </tr>
-    <tr>
-        <td>E (e)</td>
-        <td>The e in "egg"</td>
-    </tr>
-    <tr>
-        <td>F (ef)
-        <td>The f in "fun"
-    </tr>
-    <tr>
-        <td>G (ge)
-        <td>The g in "gold"
-    </tr>
-    <tr>
-        <td>I (i)
-        <td>The ee in "meet"
-    </tr>
-    <tr>
-        <td>J (je)
-        <td>The y in "yes"
-    </tr>
-    <tr>
-        <td>K (ka)
-        <td>The k in "kit"
-    </tr>
-    <tr>
-        <td>L (el)
-        <td>The l in "life"
-    </tr>
-    <tr>
-        <td>M (em)
-        <td>The m in "moon"
-    </tr>
-    <tr>
-        <td>N (en)
-        <td>The n in "nice"
-    </tr>
-    <tr>
-        <td>O (o)
-        <td>The o in "cold"
-    </tr>
-    <tr>
-        <td>P (pe)
-        <td>The p in "pen"
-    </tr>
-    <tr>
-        <td>Q (qaa)
-        <td>The q in "queen"
-    </tr>
-    <tr>
-        <td>R (er)
-        <td>The r in "red"
-    </tr>
-    <tr>
-        <td>S (es)
-        <td>The s in "sea"
-    </tr>
-    <tr>
-        <td>T (te)
-        <td>The t in "tip"
-    </tr>
-    <tr>
-        <td>U (u)
-        <td>The oo in "booth"
-    </tr>
-    <tr>
-        <td>V (ve)
-        <td>The v in "van"
-    </tr>
+<ul class="navbar">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="aboutme.html">About Me</a>
+            <li><a href="contactme.html">Contact Me</a>
+            <li class="dropdown">
+                <a href="#">Projects</a>
+                    <ul class="dropdown-content">
+                        <li><a href="#">Project 1</a></li>
+                        <li><a href="#">Project 2</a></li>
+                        <li><a href="#">Project 3</a></li>
+                        <li><a href="#">Project 4</a></li>
+                        <li><a href="#">Project 5</a></li>
+                    </ul>
+                </li>
+            </ul>
+        <h1>Jonathan Smith</h1>
+    <table border="20px">
+  <tr>
+    <th><img src="images/greenland_coat_of_arms.png" width="150px"></th>
+    <th><img src="images/jonathan_smith.jpg" width="150px"></th>
+    <th><img src="images/greenland_flag.png" width="150px"></th>
+  </tr>
+  <tr>
+    <td style="font-family:courier">My ancestors' country's Coat of Arms</td>
+    <td style="font-family:courier">That's Me!</td>
+    <td style="font-family:courier">My ancestors' country's flag</td>
+  </tr>
 </table>
+        
 </body>
 </html>
