--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Resume</title>
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     </head>
     <body>
@@ -23,8 +23,56 @@
                 </li>
             </ul>
 
-        <h1>My First Heading</h1>
-        <p>My first paragraph</p>
-        
+        <h3>Career Goals and Objectives</h3>
+        <p>My main objective is to incorporate my passions of computer science and film/broadcasting into an online business.</p>
+        <h3>Education</h3>
+        <p>I am currently enrolled at Palm Desert High School in Palm Desert, California. As a sophomore, I particularly enjoy Computer Science Principles and Biomedical Science Principles.</p>
+        <p>Colleges I aspire to attend are:</p>
+        <p><b>MIT - Massachusetts Institution of Technology</b> <i>(degree in computer science)</i></p>
+        <p><b>CalTech</b> <i>(degree in computer science)</i></p>
+        <p><b>UCLA - University of California Los Angeles</b> <i>(degree in computer science)</i></p>
+        <p><b>Stanford</b> <i>(degree in computer science)</i></p>
+        <h3>Work/Volunteer Experience</h3>
+        <p>I am a volunteer for Riverside Country Library Systems.</p>
+        <p>I have created a fundraising event in my community that raises awareness and money for <b>CVASA</b><i> (Coachella Valley Autism Society of America)</i>.</p>
+        <h3>Skills (Languages/Certifications)</h3>
+        <ul>
+        <li>Fluent in <i>English</i></li>
+        <li>Working on the following languages:</li>
+            <ul>
+            <li>I am in my second year of <b>Spanish</b></li>
+            <li>I speak a little <b>Japanese</b>, <b>Icelandic</b>, <b>Greenlandic</b>, and <b>Dutch</b>
+            <li>I want to learn <b>French</b></li>
+            </ul>
+        <li>Film Broadcaster</li>
+        <li>Video Editor</li>
+        <li>Graphic Design</li>
+        <li>Music Composer</li>
+        <li>Novice Video Game Developer</li>
+        </ul>
+        <h3>Academic Highlights & Awards</h3>
+                <ul>
+        <li><i>List of Awards</i></li>
+            <ul>
+            <li>President's Education Awards Program (June 2016 at Abraham Lincoln Elementary School)</li>
+            <li>Certificate of Participation in Boys Town Social Skills (6/5/2017 at PDCMS (Palm Desert Charter Middle School))</li>
+            <li>Most Improved Panther (6/4/2018 at PDCMS)</li>
+            <li>Green Thumb Award (12/3/2018 at PDCMS for the Advanced Gardening Club)</li>
+            <li>Every Student Succeeding Award (An award given to me by the state of California on late February of 2019)</li>
+            <li>Certificate of Promotion (Given to me for graduating middle school on June of 2019)</li>
+            </ul>
+        <li><i>List of Honor Rolls</i></li>
+            <ul>
+            <li>Honor Roll of 3.5 GPA for 3rd Quarter at PDCMS for 7th Grade</li>
+            <li>Honor Roll of 3.5 GPA for 1st Quarter at PDCMS for 8th Grade</li>
+            <li>Honor Roll of 3.5 GPA for 2nd Quarter at PDCMS for 8th Grade</li>
+            <li>HIGH Honor Roll of 4.0 GPA for 4th Quarter at PDCMS for 8th Grade</li>
+            </ul>
+        </ul>
+        <h3>Extracurricular Activites (Hobbies/Interests)</h3>
+        <li>Was a secretary of the Environmental Club at PDCMS</li>
+        <li>Was a long time member of the Advanced Gardening Club at PDCMS</li>
+        <li>Was a finalist in the Geography Bee at PDCMS</li>
+        <li>Was on the JV Water Polo Team at XCPHS (Xavier College Preparatory High School)</li>
     </body>
 </html>
