--- a/contactme.html
+++ b/contactme.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Page Title</title>
@@ -23,8 +23,9 @@
                 </li>
             </ul>
 
-        <h1>My First Heading</h1>
-        <p>My first paragraph</p>
+        <h1>Jonathan Smith</h1>
+        <p>School e-mail: jonathan.smith@myds.us</p>
+        <h3>You want my social media? Too bad >:(</h3>
         
     </body>
 </html>
