updated my info

--- a/resume.html
+++ b/resume.html
@@ -26,12 +26,11 @@
         <h3>Career Goals and Objectives</h3>
         <p>My main objective is to incorporate my passions of computer science and film/broadcasting into an online business.</p>
         <h3>Education</h3>
-        <p>I am currently enrolled at Palm Desert High School in Palm Desert, California. As a sophomore, I particularly enjoy Computer Science Principles and Biomedical Science Principles.</p>
+        <p>I am currently enrolled at Palm Desert High School in Palm Desert, California. As a sophomore (2020-2021), I particularly enjoy Computer Science Principles and Biomedical Science Principles.</p>
         <p>Colleges I aspire to attend are:</p>
-        <p><b>MIT - Massachusetts Institution of Technology</b> <i>(degree in computer science)</i></p>
-        <p><b>CalTech</b> <i>(degree in computer science)</i></p>
-        <p><b>UCLA - University of California Los Angeles</b> <i>(degree in computer science)</i></p>
-        <p><b>Stanford</b> <i>(degree in computer science)</i></p>
+        <p><b>CalTech</b> <i>(major in computer science)</i></p>
+        <p><b>UCLA - University of California Los Angeles</b> <i>(bachelor of science degree in both computer science)</i></p>
+        <p><b>Stanford</b> <i>(degree in computer science information systems )</i></p>
         <h3>Work/Volunteer Experience</h3>
         <p>I am a volunteer for Riverside Country Library Systems.</p>
         <p>I have created a fundraising event in my community that raises awareness and money for <b>CVASA</b><i> (Coachella Valley Autism Society of America)</i>.</p>
@@ -44,9 +43,9 @@
             <li>I speak a little <b>Japanese</b>, <b>Icelandic</b>, <b>Greenlandic</b>, and <b>Dutch</b>
             <li>I want to learn <b>French</b></li>
             </ul>
-        <li>Film Broadcaster</li>
-        <li>Video Editor</li>
-        <li>Graphic Design</li>
+        <li>Film Broadcaster (Streamlabs OBS)</li>
+        <li>Video Editor (Sony Vegas Pro)</li>
+        <li>Graphic Designer (Adobe Photoshop)</li>
         <li>Music Composer</li>
         <li>Novice Video Game Developer</li>
         </ul>
@@ -58,8 +57,8 @@
             <li>Certificate of Participation in Boys Town Social Skills (6/5/2017 at PDCMS (Palm Desert Charter Middle School))</li>
             <li>Most Improved Panther (6/4/2018 at PDCMS)</li>
             <li>Green Thumb Award (12/3/2018 at PDCMS for the Advanced Gardening Club)</li>
-            <li>Every Student Succeeding Award (An award given to me by the state of California on late February of 2019)</li>
-            <li>Certificate of Promotion (Given to me for graduating middle school on June of 2019)</li>
+            <li>Every Student Succeeding Award (2/25/2019 (given to me by the state of California))</li>
+            <li>Certificate of Promotion (June 2019)</li>
             </ul>
         <li><i>List of Honor Rolls</i></li>
             <ul>
