--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tikilluarit! (Welcome!)</title>
+    <title>Welcome!</title>
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
 </head>
 <body>
