updated my pics

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <table border="20px">
   <tr>
     <th><img src="images/greenland_coat_of_arms.png" width="150px"></th>
-    <th><img src="images/jonathan_smith.jpg" width="150px"></th>
+    <th><img src="images/jonathan_smith_monument.jpg" width="150px"></th>
     <th><img src="images/greenland_flag.png" width="150px"></th>
   </tr>
   <tr>
