--- a/textadventure.html
+++ b/textadventure.html
@@ -81,15 +81,18 @@
                 </div>
                 <div id="button_choices">
                     <a id="b1" class="buttons" href="#" onclick="bclick(1)">Begin!</a>
-                    <a id="b2" class="buttons" href="#" onclick="bclick(1)">Begin!</a>
-                    <a id="b3" class="buttons" href="#" onclick="bclick(1)">Begin!</a>
-                    <a id="b4" class="buttons" href="#" onclick="bclick(1)">Begin!</a>
+                    <a id="b2" class="buttons" href="#" onclick="bclick(2)">Begin!</a>
+                    <a id="b3" class="buttons" href="#" onclick="bclick(3)">Begin!</a>
+                    <a id="b4" class="buttons" href="#" onclick="bclick(4)">Begin!</a>
                 </div>
             </div>
         </div>
 
         <script>
             var b1 = document.getElementById("b1");
+            var b2 = document.getElementById("b2");
+            var b3 = document.getElementById("b3");
+            var b4 = document.getElementById("b4");
             var img = document.getElementById("story_img");
             var p1 = document.getElementById("p1");
             var p2 = document.getElementById("p2");
@@ -109,10 +112,10 @@
             }
 
             function begin(){
-                img.src = "images/greenland_flag.png";
-                p1.innerHTML = "Sample Text"
-                p2.innerHTML = "Sample Text"
-                p3.innerHTML = "Sample Text"
+                img.src = "images/screen_one.jpg";
+                p1.innerHTML = "Ruins of Nuuk"
+                p2.innerHTML = "You've awoken from your coma, only to find the capital city, Nuuk in flames. After scouting the area for trouble and signs of life, you come across an intersection."
+                p3.innerHTML = "Which path shall you take?"
                 b1.innerHTML = "Upper Route";
                 b2.innerHTML = "Lower Route";
                 b2.style.display = "block"
@@ -121,30 +124,170 @@
             }                
 
             function upperRoute(){
-                img.src = "images/greenland_coat_of_arms.png";
-                p1.innerHTML = "Sample Text"
-                p2.innerHTML = "Sample Text"
-                p3.innerHTML = "Sample Text"
-                b1.innerHTML = "?";
-                b2.innerHTML = "?";
-                b2.style.display = "block"
+                img.src = "images/screen_four.jpg";
+                p1.innerHTML = "Abandoned Mines of Nuuk"
+                p2.innerHTML = "You find some villagers seeking refuge near the mines, but not for long, because now it's time for you to enter the mines. While you are being lowered, there are two paths you can take.";
+                p3.innerHTML = "What path shall you take?";
+                p3.style.display = "block";
+                b1.innerHTML = "Upper Mines";
+                b2.innerHTML = "Lower Mines";
+                b2.style.display = "block";
                 b3.style.display = "none";
                 b4.style.display = "none";
             }      
 
             function lowerRoute(){
-                img.src = "images/greenland_flag.png";
-                p1.innerHTML = "Sample Text"
-                p2.innerHTML = "Sample Text"
-                p3.innerHTML = "Sample Text"
-                b1.innerHTML = "?";
-                b2.innerHTML = "?";
+                img.src = "images/screen_two.jpg";
+                p1.innerHTML = "Ruins of Nuuk"
+                p2.innerHTML = "You've found a secret room with some treasure, but while getting the treasure, you activated a falling trap."
+                p3.innerHTML = "What are you going to do, Jonasan?"
+                b1.innerHTML = "Uppercut the falling trap";
+                b2.innerHTML = "Dodge the falling trap";
                 b2.style.display = "block"
                 b3.style.display = "none";
                 b4.style.display = "none";
-            }      
+            } 
+            
+            function upperMines(){
+                img.src = "images/greenland_flag.png";
+                p1.innerHTML = "Abandoned Mines"
+                p2.innerHTML = "After taking part in many Indiana Jones minecart ride scenarios, you come across to a higher cliff with something shiny up there."
+                p3.innerHTML = "What are you going to do?"
+                b1.innerHTML = "Hop up onto the cliff";
+                b2.innerHTML = "Ignore the cliff";
+                b2.style.display = "block"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
 
+            function lowerMines(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Abandoned Mines"
+                p2.innerHTML = "There are two tunnels you can take."
+                p3.innerHTML = "Which one shall you travel through?"
+                b1.innerHTML = "Backwards";
+                b2.innerHTML = "Fowards";
+                b2.style.display = "block"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            }
 
+            function treasureTrap(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Abandoned Mines"
+                p2.innerHTML = "Well since I have zero idea on how to make the treasure a one time collectable, I might as well as say that YOU GOT SENT BACK TO THE SURFACE HAHA LOL XD"
+                p3.style.display = "none"
+                b1.innerHTML = "Continue"
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
+
+            function dodgeTrap(){
+                img.src = "images/screen_three.jpg";
+                p1.innerHTML = "Ruins of Nuuk";
+                p2.innerHTML = "Phew! That was a close call!";
+                p3.style.display = "none";
+                b1.innerHTML = "Continue";
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            }
+
+            function powerGem(){
+                img.src = "images/greenland_flag.png";
+                p1.innerHTML = "Abandoned Mines"
+                p2.innerHTML = "Gem Acquired!"
+                p3.style.display = "none"
+                b1.innerHTML = "Continue";
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
+
+            function bossPhaseOne(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
+                p2.innerHTML = "After riding a minecart to the pen of the furious Iron Bull, it's time you face off one of the war machines Tornatik has sent out onto you."
+                p3.innerHTML = "How will you take this boss down?"
+                b1.innerHTML = "Attack him like normal";
+                b2.innerHTML = "Dodge his attacks";
+                b2.style.display = "block"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
+
+            function bossPhaseTwo(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
+                p2.innerHTML = "You're going somewhere."
+                p3.innerHTML = "Now what?"
+                b1.innerHTML = "Attack him like normal";
+                b2.innerHTML = "Dodge his attacks";
+                b2.style.display = "block"
+                b3.innerHTML = "High kick his butt"
+                b3.style.display = "block";
+                b4.style.display = "none";
+            } 
+
+            function bossWastingTime(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
+                p2.innerHTML = "You're wasting time if you are only going to dodge his attacks. The longer you wait, the worse Greenland will get, and Jooriina may never see daylight again."
+                p3.style.display = "none"
+                b1.innerHTML = "Continue"
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
+
+            function bossHalfHealth(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
+                p2.innerHTML = "Nice! The Iron Bull is at half health, but is getting even more furious."
+                p3.innerHTML = "How are you gonna end this fight?"
+                p3.style.display = "block"
+                b1.innerHTML = "Attack him like normal";
+                b2.innerHTML = "Dodge his attacks";
+                b2.style.display = "block"
+                b3.innerHTML = "High kick his butt"
+                b3.style.display = "block";
+                b4.innerHTML = "Finish him off with the boulders the miners throw"
+                b4.style.display = "block";
+            } 
+
+            function bossDefeated(){
+                img.src = "images/greenland_coat_of_arms.png";
+                p1.innerHTML = "Boss Defeated!!!"
+                p2.innerHTML = "Kaboom!!! The Iron Bull has been shut down for good and the mines can now rest. But you, Jonasan, have no time to rest. You must progress to the next world and take on their challenges."
+                p3.style.display = "none"
+                b1.innerHTML = "Continue"
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            } 
+
+            function demoFinished(){
+                img.src = "images/greenland_flag.png";
+                p1.innerHTML = "Demo Completed!!!";
+                p2.style.display = "none";
+                p3.style.display = "none";
+                b1.style.display = "none";
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            }
+
+            function gameOver(){
+                img.src = "images/gameover.jpg";
+                p1.innerHTML = "Game Over!";
+                p2.style.display = "none";
+                p3.style.display = "none";
+                b1.style.display = "none";
+                b2.style.display = "none"
+                b3.style.display = "none";
+                b4.style.display = "none";
+            }
             ////State Machine
             function bclick(button){
                 if (state == "intro"){
@@ -163,10 +306,120 @@
                         state="lowerRoute";
                     }
                 }
+                else if(state == "upperRoute"){
+                    if (button == 1){
+                        upperMines();
+                        state="upperMines"
+                    }
+                    else if(button == 2){
+                        lowerMines();
+                        state="lowerMines";
+                    } 
+                }
+                else if(state == "lowerRoute"){
+                    if (button == 1){
+                        gameOver();
+                        state="gameOver"
+                    }
+                    else if(button == 2){
+                        dodgeTrap();
+                        state="dodgeTrap";
+                    }
+                }
+                else if(state == "dodgeTrap"){
+                    if (button == 1){
+                        upperRoute();
+                        state="upperRoute"
+                    }
+                }
+                else if(state == "upperMines"){
+                    if (button == 1){
+                        powerGem();
+                        state="powerGem"
+                    }
+                    else if(button == 2){
+                        bossPhaseOne();
+                        state="bossPhaseOne";
+                    } 
+                }
+
+                else if(state == "lowerMines"){
+                    if (button == 1){
+                        treasureTrap();
+                        state="treasureTrap"
+                    }
+                    else if(button == 2){
+                        bossPhaseOne();
+                        state="bossPhaseOne";
+                    } 
+                }
+                else if(state == "treasureTrap"){
+                    if (button == 1){
+                        upperRoute();
+                        state="upperRoute"
+                    }
+                }
+                else if(state == "powerGem"){
+                    if (button == 1){
+                        bossPhaseOne();
+                        state="bossPhaseOne"
+                    }
+                }
+                else if(state == "bossPhaseOne"){
+                    if (button == 1){
+                        gameOver();
+                        state="gameOver"
+                    }
+                    else if(button == 2){
+                        bossPhaseTwo();
+                        state="bossPhaseTwo";
+                    } 
+                }
+                else if(state == "bossPhaseTwo"){
+                    if (button == 1){
+                        gameOver();
+                        state="gameOver"
+                    }
+                    else if(button == 2){
+                        bossWastingTime();
+                        state="bossWastingTime";
+                    } 
+                    else if(button == 3){
+                        bossHalfHealth();
+                        state="bossHalfHealth"
+                    }
+                }
+                else if(state == "bossWastingTime"){
+                    if (button == 1){
+                        bossPhaseTwo();
+                        state="bossPhaseTwo"
+                    }
+                }
+                else if(state == "bossHalfHealth"){
+                    if (button == 1){
+                        gameOver();
+                        state="gameOver"
+                    }
+                    else if(button == 2){
+                        bossWastingTime();
+                        state="bossWastingTime";
+                    } 
+                    else if(button == 3){
+                        bossHalfHealth();
+                        state="gameOver"
+                    }
+                    else if(button == 4){
+                        bossDefeated();
+                        state="bossDefeated"
+                    }
+                }
+                else if(state == "bossDefeated"){
+                    if (button == 1){
+                        demoFinished();
+                        state="demoFinished"
+                    }
+                }
             }
-
-
-
         </script>
     </body>
 </html>
