text adventured added

--- a/textadventure.html
+++ b/textadventure.html
@@ -149,7 +149,7 @@
             } 
             
             function upperMines(){
-                img.src = "images/greenland_flag.png";
+                img.src = "images/screen_five.jpg";
                 p1.innerHTML = "Abandoned Mines"
                 p2.innerHTML = "After taking part in many Indiana Jones minecart ride scenarios, you come across to a higher cliff with something shiny up there."
                 p3.innerHTML = "What are you going to do?"
@@ -161,7 +161,7 @@
             } 
 
             function lowerMines(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_ten.jpg";
                 p1.innerHTML = "Abandoned Mines"
                 p2.innerHTML = "There are two tunnels you can take."
                 p3.innerHTML = "Which one shall you travel through?"
@@ -173,7 +173,7 @@
             }
 
             function treasureTrap(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_six.jpg";
                 p1.innerHTML = "Abandoned Mines"
                 p2.innerHTML = "Well since I have zero idea on how to make the treasure a one time collectable, I might as well as say that YOU GOT SENT BACK TO THE SURFACE HAHA LOL XD"
                 p3.style.display = "none"
@@ -195,7 +195,7 @@
             }
 
             function powerGem(){
-                img.src = "images/greenland_flag.png";
+                img.src = "images/gem_acquired.png";
                 p1.innerHTML = "Abandoned Mines"
                 p2.innerHTML = "Gem Acquired!"
                 p3.style.display = "none"
@@ -206,7 +206,7 @@
             } 
 
             function bossPhaseOne(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_seven.jpg";
                 p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
                 p2.innerHTML = "After riding a minecart to the pen of the furious Iron Bull, it's time you face off one of the war machines Tornatik has sent out onto you."
                 p3.innerHTML = "How will you take this boss down?"
@@ -218,10 +218,11 @@
             } 
 
             function bossPhaseTwo(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_eight.jpg";
                 p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
                 p2.innerHTML = "You're going somewhere."
                 p3.innerHTML = "Now what?"
+                p3.style.display = "block"
                 b1.innerHTML = "Attack him like normal";
                 b2.innerHTML = "Dodge his attacks";
                 b2.style.display = "block"
@@ -231,7 +232,7 @@
             } 
 
             function bossWastingTime(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_eight.jpg";
                 p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
                 p2.innerHTML = "You're wasting time if you are only going to dodge his attacks. The longer you wait, the worse Greenland will get, and Jooriina may never see daylight again."
                 p3.style.display = "none"
@@ -242,7 +243,7 @@
             } 
 
             function bossHalfHealth(){
-                img.src = "images/greenland_coat_of_arms.png";
+                img.src = "images/screen_nine.jpg";
                 p1.innerHTML = "Iron Bull's Pen (Boss Time!)"
                 p2.innerHTML = "Nice! The Iron Bull is at half health, but is getting even more furious."
                 p3.innerHTML = "How are you gonna end this fight?"
