--- a/textadventure.html
+++ b/textadventure.html
@@ -61,8 +61,8 @@
             <li class="dropdown">
                 <a href="#">Projects</a>
                     <ul class="dropdown-content">
-                        <li class="active"><a href="textadventure.html">Text Adventure</a></li>
-                        <li><a href="#">Project 2</a></li>
+                        <li class="active"><a href="#">Text Adventure</a></li>
+                        <li><a href="pythonproj.html">Python Project</a></li>
                         <li><a href="#">Project 3</a></li>
                         <li><a href="#">Project 4</a></li>
                         <li><a href="#">Project 5</a></li>
