--- a/contactme.html
+++ b/contactme.html
@@ -10,13 +10,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="aboutme.html">About Me</a>
-            <li class="active"><a href="contactme.html">Contact Me</a>
+            <li class="active"><a href="#">Contact Me</a>
             <li class="dropdown">
                 <a href="#">Projects</a>
                     <ul class="dropdown-content">
                         <li><a href="textadventure.html">Text Adventure</a></li>
                         <li><a href="pythonproj.html">Python Project</a></li>
-                        <li><a href="#">Project 3</a></li>
+                        <li><a href="calcdemo.html">Tkinter Calculator</a></li>
                         <li><a href="#">Project 4</a></li>
                         <li><a href="#">Project 5</a></li>
                     </ul>
