--- a/textadventure.html
+++ b/textadventure.html
@@ -63,7 +63,7 @@
                     <ul class="dropdown-content">
                         <li class="active"><a href="#">Text Adventure</a></li>
                         <li><a href="pythonproj.html">Python Project</a></li>
-                        <li><a href="#">Project 3</a></li>
+                        <li><a href="calcdemo.html">Tkinter Calculator</a></li>
                         <li><a href="#">Project 4</a></li>
                         <li><a href="#">Project 5</a></li>
                     </ul>
