added rsa demo, removed calculator and instead added tkinter address book

--- a/tkinteraddressdemo.html
+++ b/tkinteraddressdemo.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Tkinter Address Book</title>
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     </head>
     <body>
-
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
@@ -16,15 +15,13 @@
                     <ul class="dropdown-content">
                         <li><a href="textadventure.html">Text Adventure</a></li>
                         <li><a href="pythonproj.html">Python Project</a></li>
-                        <li><a href="tkinteraddressdemo.html">Tkinter Address Book</a></li>
+                        <li class="active"><a href="#">Tkinter Address Book</Address></a></li>
                         <li><a href="rsa.html">RSA Project</a></li>
                         <li><a href="#">Project 5</a></li>
                     </ul>
                 </li>
             </ul>
-
-        <h1>My First Heading</h1>
-        <p>My first paragraph</p>
-        
+        <h1>Tkinter Address Book Demo</h1>
+        <p>This page is currently under construction</p>
     </body>
 </html>
