--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <ul class="dropdown-content">
                         <li><a href="textadventure.html">Text Adventure</a></li>
                         <li><a href="pythonproj.html">Python Project</a></li>
-                        <li><a href="calcdemo.html">Tkinter Calculator</a></li>
-                        <li><a href="#">Project 4</a></li>
+                        <li><a href="tkinteraddressdemo.html">Tkinter Address Book</a></li>
+                        <li><a href="rsa.html">RSA Project</a></li>
                         <li><a href="#">Project 5</a></li>
                     </ul>
                 </li>
