--- a/pythonproj.html
+++ b/pythonproj.html
@@ -15,7 +15,7 @@
                     <ul class="dropdown-content">
                         <li><a href="textadventure.html">Text Adventure</a></li>
                         <li><a href="#">Python Project</a></li>
-                        <li><a href="tkinteraddressdemo.html">Tkinter Address Book</a></li>
+                        <li><a href="calcdemo.html">Tkinter Calculator</a></li>
                         <li><a href="rsa.html">RSA Project</a></li>
                         <li><a href="#">Project 5</a></li>
                     </ul>
