changed main character's name from Jonasan to Joorsi

--- a/textadventure.html
+++ b/textadventure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jonasan Iliversiooq</title>
+        <title>Joorsi Iliversiooq</title>
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     </head>
     <style>
@@ -75,8 +75,8 @@
             </div>
             <div id="right_pane">
                 <div id="story_text">
-                    <h1 id="p1">Jonasan Iliversiooq</h1>
-                    <h3 id="p2">Jonasan the Crusader<h3>
+                    <h1 id="p1">Joorsi Iliversiooq</h1>
+                    <h3 id="p2">Joorsi the Crusader<h3>
                     <h5 id="p3">©2020 Unnamed Creator</h5>
                 </div>
                 <div id="button_choices">
@@ -106,8 +106,8 @@
                 b2.style.display = "none";
                 b3.style.display = "none";
                 b4.style.display = "none";
-                p1.innerHTML = "Jonasan Iliversiooq"
-                p2.innerHTML = "Jonasan the Crusader"
+                p1.innerHTML = "Joorsi Iliversiooq"
+                p2.innerHTML = "Joorsi the Crusader"
                 p3.innerHTML = "Demo Version"
             }
 
@@ -140,7 +140,7 @@
                 img.src = "images/screen_two.jpg";
                 p1.innerHTML = "Ruins of Nuuk"
                 p2.innerHTML = "You've found a secret room with some treasure, but while getting the treasure, you activated a falling trap."
-                p3.innerHTML = "What are you going to do, Jonasan?"
+                p3.innerHTML = "What are you going to do, Joorsi?"
                 b1.innerHTML = "Uppercut the falling trap";
                 b2.innerHTML = "Dodge the falling trap";
                 b2.style.display = "block"
@@ -260,7 +260,7 @@
             function bossDefeated(){
                 img.src = "images/greenland_coat_of_arms.png";
                 p1.innerHTML = "Boss Defeated!!!"
-                p2.innerHTML = "Kaboom!!! The Iron Bull has been shut down for good and the mines can now rest. But you, Jonasan, have no time to rest. You must progress to the next world and take on their challenges."
+                p2.innerHTML = "Kaboom!!! The Iron Bull has been shut down for good and the mines can now rest. But you, Joorsi, have no time to rest. You must progress to the next world and take on their challenges."
                 p3.style.display = "none"
                 b1.innerHTML = "Continue"
                 b2.style.display = "none"
