added my final project

--- a/icelandict.html
+++ b/icelandict.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>IcelanDict</title>
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     </head>
     <body>
-
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
@@ -18,13 +17,17 @@
                         <li><a href="pythonproj.html">Python Project</a></li>
                         <li><a href="calcdemo.html">Tkinter Calculator</a></li>
                         <li><a href="rsa.html">RSA Project</a></li>
-                        <li><a href="icelandict.html">IcelanDict</a></li>
+                        <li><a class="active">IcelanDict</a></li>
                     </ul>
                 </li>
             </ul>
-
-        <h1>My First Heading</h1>
-        <p>My first paragraph</p>
-        
+        <h1>IcelanDict Demo</h1>
+        <video width="320" height="240" controls>
+            <source src="icelandictdemo.mp4" type="video/mp4">
+        </video>
+        <p>IcelanDict is a translator and dictionary app that was created as a way to make learning Icelandic an easier and more enjoyable experience. With every word you discover, it adds more knowledge to your index!</p>
+        <p>The branding screen, menu, translator, and index functionalities are demonstrated in the video.</p>
+        <p>Whenever you translate a word from English into Icelandic, the Icelandic word is saved into the index.</p>
+        <a href="https://x.thunkable.com/copy/18034c57780925ca2b920e5b11b37f33">You can try out this program for yourself here!</a>
     </body>
 </html>
