--- a/calcdemo.html
+++ b/calcdemo.html
@@ -17,7 +17,7 @@
                         <li><a href="pythonproj.html">Python Project</a></li>
                         <li class="active"><a href="#">Tkinter Calculator</Address></a></li>
                         <li><a href="rsa.html">RSA Project</a></li>
-                        <li><a href="#">Project 5</a></li>
+                        <li><a href="icelandict.html">IcelanDict</a></li>
                     </ul>
                 </li>
             </ul>
