--- a/pythonproj.html
+++ b/pythonproj.html
@@ -14,10 +14,10 @@
                 <a href="#">Projects</a>
                     <ul class="dropdown-content">
                         <li><a href="textadventure.html">Text Adventure</a></li>
-                        <li><a href="#">Python Project</a></li>
+                        <li><a href="active">Python Project</a></li>
                         <li><a href="calcdemo.html">Tkinter Calculator</a></li>
                         <li><a href="rsa.html">RSA Project</a></li>
-                        <li><a href="#">Project 5</a></li>
+                        <li><a href="icelandict.html">IcelanDict</a></li>
                     </ul>
                 </li>
             </ul>
